# solstice

./: CMakeLists.txt  README.md
goldpkg/: gold
include/: json.hpp  resolution.hpp
src/: CMakeLists.txt  main.cpp  orchestrator.cpp  orchestrator.h
src/broadcaster/: README.md  broadcaster.cpp  broadcaster.h
src/common/: CMakeLists.txt  asset_class.cpp  asset_class.h  options.cpp  options.h  order.cpp  order.h  transaction.cpp  transaction.h
src/config/: CMakeLists.txt  config.cpp  config.h
src/enums/: CMakeLists.txt  asset_class.cpp  asset_class.h  market_side.cpp  option_type.cpp  option_type.h
src/matching/: matcher.cpp  matcher.h  order_book.cpp  order_book.h
src/pricing/: CMakeLists.txt  README.md  equity_price_data.cpp  equity_price_data.h  future_price_data.cpp  future_price_data.h  greeks.cpp  greeks.h  option_price_data.cpp  option_price_data.h  pricer.cpp  pricer.h  pricing_data.cpp  pricing_data.h  pricing_utils.cpp  pricing_utils.h
src/strategy/: dispatcher.cpp  dispatcher.h  market_data.h  py_interface.cpp  py_interface.h
src/strategy/components/: account.cpp  account.h  position.cpp  position.h
src/strategy/implementations/: sharp_movements.cpp
src/utils/: CMakeLists.txt  get_random.cpp  get_random.h  time_point.cpp  time_point.h  truncate.cpp  truncate.h  types.h
tests/: CMakeLists.txt
tests/unit/: test_asset_class.cpp  test_config.cpp  test_matcher.cpp  test_options.cpp  test_orchestrator.cpp  test_order.cpp  test_order_book.cpp  test_pricer.cpp  test_underlying.cpp
